--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hello
+CLS
+NEW
+
+'CLS:?"MJ GET kidspod.club/mj/ﾊﾞﾝｺﾞｳ"
+'CLS:?"MJ POST START kidspod.club/mj/ﾊﾞﾝｺﾞｳ:XXXXXX":LIST:?"MJ POST END"
+'CLS:?"MJ GET ﾅﾏｴ.github.io/IJ/ﾌﾟﾛｸﾞﾗﾑ"
+
+
