--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-CLS
-NEW
-
-'CLS:?"MJ GET kidspod.club/mj/ﾊﾞﾝｺﾞｳ"
-'CLS:?"MJ POST START kidspod.club/mj/ﾊﾞﾝｺﾞｳ:XXXXXX":LIST:?"MJ POST END"
-'CLS:?"MJ GET ﾅﾏｴ.github.io/IJ/ﾌﾟﾛｸﾞﾗﾑ"
-
+    10 'Github index.html
+    20 CLS
+    30 NEW
+    40 '
+    50 'CLS:?"MJ GET kidspod.club/mj/ハ゛ンコ゛ウ"
+    60 'CLS:?"MJ POST START kidspod.club/mj/ハ゛ンコ゛ウ:AXXXXX":LIST:?"MJ POST END"
+    70 'CLS:?"MJ GET ナマエ.github.io/IJ/ファイルメイ"
 
